img folder and links fixed

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link rel="stylesheet" href="./style.css" />
 
     <!-- import the webpage's javascript file (do not edit) -->
-    <script src="script.js" defer></script>
+    <script src="./script.js" defer></script>
   </head>
   <body>
   <div class="row">
@@ -95,7 +95,7 @@
           <br />
           <p>🧩🤾🤿🌄🌠💎🧿🪅❗🏴‍☠️</p>
           <br />
-
+          <img src="./img/swift.gif">
         </div>
       </div>
 
@@ -164,7 +164,7 @@
         <div class="cardSearch">
           <!-- edit the cardSearch class in style.css to change the look-->
           <img
-            src="https://cdn.glitch.com/02600171-b43e-46dd-a21e-bfc0b9a82267%2Fsearching.gif?v=1620460284530"
+            src="./img/searching.gif"
             lt="Searching"
           />
           <!-- this image is the 'searching' gif, but you can design a different heading, upload it to 'assets' and replace the above URL -->
@@ -184,7 +184,7 @@
       <div class="columnXl">
         <!-- specifies the width of the card -->
         <div class="cardPoem">
-          <p>Dystopian dreams (after Nick Monfort's <a href="https://nickm.com/taroko_gorge/original.html">Taroko Gorge</a>)</p>
+          <p>Dystopian dreams (after Benjamin Laird's 'We Walk to You' version of Nick Monfort's <a href="https://nickm.com/taroko_gorge/original.html">Taroko Gorge</a>)</p>
           <hr />
           <div id="poem" style="text-align: right"></div>
         </div>
